tests/src/frontend/syntax/invalid/public_method.sk
class X() {
  public static fun f(): void { void }
}
